--- a/docs/_includes/css/forms.html
+++ b/docs/_includes/css/forms.html
@@ -3,6 +3,7 @@
 
   <h2 id="forms-example">Basic example</h2>
   <p>Individual form controls automatically receive some global styling. All textual <code>&lt;input&gt;</code>, <code>&lt;textarea&gt;</code>, and <code>&lt;select&gt;</code> elements with <code>.form-control</code> are set to <code>width: 100%;</code> by default. Wrap labels and controls in <code>.form-group</code> for optimum spacing.</p>
+  <p><a href="../examples/ku-formvalidation/">See example of forms wil form dynamic front-end validation here</a>.</p>
   <div class="bs-example" data-example-id="basic-forms">
     <form>
       <div class="form-group">
@@ -1026,4 +1027,3 @@
   </div>
 </div>
 {% endhighlight %}
-
