--- a/docs/_includes/ku-leftmenu.html
+++ b/docs/_includes/ku-leftmenu.html
@@ -10,11 +10,12 @@
         <li><a href="../ku-right-sidebar/">Template with left menu and right sidebar</a></li>
       </ul>
     </li>
-    <li><a href="#">Special KU features</a>
+    <li><a href="#">Special KU plug-ins</a>
       <ul>
         <li><a href="../ku-with-slideshow/">Template with slideshow</a></li>
         <li><a href="../ku-gridboxes/">Template with grid boxes</a></li>
         <li><a href="../ku-datatables/">Template with data tables</a></li>
+        <li><a href="../ku-formvalidation/">Template with form validation</a></li>
         <li><a href="#">Link 2.1</a>
           <ul>
             <li><a href="#">Link 3.1</a></li>
