--- a/less/ku-gridboxes.less
+++ b/less/ku-gridboxes.less
@@ -327,7 +327,7 @@
 
 .boxlink {
     color: inherit;
-    &:hover {
+    &:hover, &:active, &:focus {
         text-decoration: none;
         color: inherit;
     }
