--- a/docs/_includes/customizer-variables.html
+++ b/docs/_includes/customizer-variables.html
@@ -255,35 +255,44 @@
 <p>Define common padding and border radius sizes and more. Values based on 14px text and 1.428 line-height (~20px to start).</p>
 <div class="row">
   <div class="col-xs-4">
+    <label for="input-@padding20">@padding20</label>
+    <input class="form-control" id="input-@padding20" type="text" value="20px" data-var="@padding20"/>
+  </div>
+  <div class="col-xs-4">
     <label for="input-@padding10">@padding10</label>
     <input class="form-control" id="input-@padding10" type="text" value="10px" data-var="@padding10"/>
   </div>
   <div class="col-xs-4">
-    <label for="input-@margin10">@margin10</label>
-    <input class="form-control" id="input-@margin10" type="text" value="10px" data-var="@margin10"/>
-  </div>
-  <div class="col-xs-4">
-    <label for="input-@padding20">@padding20</label>
-    <input class="form-control" id="input-@padding20" type="text" value="20px" data-var="@padding20"/>
+    <label for="input-@padding15">@padding15</label>
+    <input class="form-control" id="input-@padding15" type="text" value="15px" data-var="@padding15"/>
   </div>
   <div class="clearfix"></div>
   <div class="col-xs-4">
-    <label for="input-@padding15">@padding15</label>
-    <input class="form-control" id="input-@padding15" type="text" value="15px" data-var="@padding15"/>
+    <label for="input-@padding0">@padding0</label>
+    <input class="form-control" id="input-@padding0" type="text" value="0" data-var="@padding0"/>
   </div>
   <div class="col-xs-4">
     <label for="input-@margin20">@margin20</label>
     <input class="form-control" id="input-@margin20" type="text" value="20px" data-var="@margin20"/>
   </div>
   <div class="col-xs-4">
+    <label for="input-@margin10">@margin10</label>
+    <input class="form-control" id="input-@margin10" type="text" value="10px" data-var="@margin10"/>
+  </div>
+  <div class="clearfix"></div>
+  <div class="col-xs-4">
+    <label for="input-@margin0">@margin0</label>
+    <input class="form-control" id="input-@margin0" type="text" value="0" data-var="@margin0"/>
+  </div>
+  <div class="col-xs-4">
     <label for="input-@padding-base-vertical">@padding-base-vertical</label>
     <input class="form-control" id="input-@padding-base-vertical" type="text" value="6px" data-var="@padding-base-vertical"/>
   </div>
-  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@padding-base-horizontal">@padding-base-horizontal</label>
     <input class="form-control" id="input-@padding-base-horizontal" type="text" value="12px" data-var="@padding-base-horizontal"/>
   </div>
+  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@padding-large-vertical">@padding-large-vertical</label>
     <input class="form-control" id="input-@padding-large-vertical" type="text" value="20px" data-var="@padding-large-vertical"/>
@@ -292,11 +301,11 @@
     <label for="input-@padding-large-horizontal">@padding-large-horizontal</label>
     <input class="form-control" id="input-@padding-large-horizontal" type="text" value="20px" data-var="@padding-large-horizontal"/>
   </div>
-  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@padding-small-vertical">@padding-small-vertical</label>
     <input class="form-control" id="input-@padding-small-vertical" type="text" value="10px" data-var="@padding-small-vertical"/>
   </div>
+  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@padding-small-horizontal">@padding-small-horizontal</label>
     <input class="form-control" id="input-@padding-small-horizontal" type="text" value="10px" data-var="@padding-small-horizontal"/>
@@ -305,11 +314,11 @@
     <label for="input-@padding-xs-vertical">@padding-xs-vertical</label>
     <input class="form-control" id="input-@padding-xs-vertical" type="text" value="1px" data-var="@padding-xs-vertical"/>
   </div>
-  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@padding-xs-horizontal">@padding-xs-horizontal</label>
     <input class="form-control" id="input-@padding-xs-horizontal" type="text" value="5px" data-var="@padding-xs-horizontal"/>
   </div>
+  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@line-height-large">@line-height-large</label>
     <input class="form-control" id="input-@line-height-large" type="text" value="1.3333333" data-var="@line-height-large"/>
@@ -318,11 +327,11 @@
     <label for="input-@line-height-small">@line-height-small</label>
     <input class="form-control" id="input-@line-height-small" type="text" value="1.5" data-var="@line-height-small"/>
   </div>
-  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@border-radius-base">@border-radius-base</label>
     <input class="form-control" id="input-@border-radius-base" type="text" value="2px" data-var="@border-radius-base"/>
   </div>
+  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@border-radius-large">@border-radius-large</label>
     <input class="form-control" id="input-@border-radius-large" type="text" value="6px" data-var="@border-radius-large"/>
@@ -331,12 +340,12 @@
     <label for="input-@border-radius-small">@border-radius-small</label>
     <input class="form-control" id="input-@border-radius-small" type="text" value="3px" data-var="@border-radius-small"/>
   </div>
-  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@component-active-color">@component-active-color</label>
     <input class="form-control" id="input-@component-active-color" type="text" aria-describedby="help-block-@component-active-color" value="#fff" data-var="@component-active-color"/>
     <p class="help-block" id="help-block-@component-active-color">Global color for active items (e.g., navs or dropdowns).</p>
   </div>
+  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@component-active-bg">@component-active-bg</label>
     <input class="form-control" id="input-@component-active-bg" type="text" aria-describedby="help-block-@component-active-bg" value="@brand-primary" data-var="@component-active-bg"/>
@@ -347,7 +356,6 @@
     <input class="form-control" id="input-@caret-width-base" type="text" aria-describedby="help-block-@caret-width-base" value="4px" data-var="@caret-width-base"/>
     <p class="help-block" id="help-block-@caret-width-base">Width of the <code>border</code> for generating carets that indicate dropdowns.</p>
   </div>
-  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@caret-width-large">@caret-width-large</label>
     <input class="form-control" id="input-@caret-width-large" type="text" aria-describedby="help-block-@caret-width-large" value="5px" data-var="@caret-width-large"/>
@@ -1824,23 +1832,23 @@
   </div>
   <div class="col-xs-4">
     <label for="input-@breadcrumb-bg">@breadcrumb-bg</label>
-    <input class="form-control" id="input-@breadcrumb-bg" type="text" aria-describedby="help-block-@breadcrumb-bg" value="#f5f5f5" data-var="@breadcrumb-bg"/>
+    <input class="form-control" id="input-@breadcrumb-bg" type="text" aria-describedby="help-block-@breadcrumb-bg" value="@white-color" data-var="@breadcrumb-bg"/>
     <p class="help-block" id="help-block-@breadcrumb-bg">Breadcrumb background color</p>
   </div>
   <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@breadcrumb-color">@breadcrumb-color</label>
-    <input class="form-control" id="input-@breadcrumb-color" type="text" aria-describedby="help-block-@breadcrumb-color" value="#ccc" data-var="@breadcrumb-color"/>
+    <input class="form-control" id="input-@breadcrumb-color" type="text" aria-describedby="help-block-@breadcrumb-color" value="@gray-dark" data-var="@breadcrumb-color"/>
     <p class="help-block" id="help-block-@breadcrumb-color">Breadcrumb text color</p>
   </div>
   <div class="col-xs-4">
     <label for="input-@breadcrumb-active-color">@breadcrumb-active-color</label>
-    <input class="form-control" id="input-@breadcrumb-active-color" type="text" aria-describedby="help-block-@breadcrumb-active-color" value="@gray-light" data-var="@breadcrumb-active-color"/>
+    <input class="form-control" id="input-@breadcrumb-active-color" type="text" aria-describedby="help-block-@breadcrumb-active-color" value="#a9adb2" data-var="@breadcrumb-active-color"/>
     <p class="help-block" id="help-block-@breadcrumb-active-color">Text color of current page in the breadcrumb</p>
   </div>
   <div class="col-xs-4">
     <label for="input-@breadcrumb-separator">@breadcrumb-separator</label>
-    <input class="form-control" id="input-@breadcrumb-separator" type="text" aria-describedby="help-block-@breadcrumb-separator" value="&quot;/&quot;" data-var="@breadcrumb-separator"/>
+    <input class="form-control" id="input-@breadcrumb-separator" type="text" aria-describedby="help-block-@breadcrumb-separator" value="&quot;&gt;&quot;" data-var="@breadcrumb-separator"/>
     <p class="help-block" id="help-block-@breadcrumb-separator">Textual separator for between breadcrumb elements</p>
   </div>
 </div>
