--- a/less/forms.less
+++ b/less/forms.less
@@ -212,6 +212,9 @@ input[type="search"] {
 
 .form-group {
   margin-bottom: @form-group-margin-bottom;
+  .form-group { // KU
+      margin-bottom: 0;
+  }
 }
 
 
