--- a/less/variables.less
+++ b/less/variables.less
@@ -116,11 +116,14 @@
 //== Components
 //
 //## Define common padding and border radius sizes and more. Values based on 14px text and 1.428 line-height (~20px to start).
-@padding10: 10px;
-@margin10: 10px;
+
 @padding20: 20px;
+@padding10: 10px;
 @padding15: 15px;
+@padding0: 0;
 @margin20: 20px;
+@margin10: 10px;
+@margin0: 0;
 
 @padding-base-vertical:     6px;
 @padding-base-horizontal:   12px;
@@ -840,13 +843,13 @@
 @breadcrumb-padding-vertical:   8px;
 @breadcrumb-padding-horizontal: 15px;
 //** Breadcrumb background color
-@breadcrumb-bg:                 #f5f5f5;
+@breadcrumb-bg:                 @white-color;
 //** Breadcrumb text color
-@breadcrumb-color:              #ccc;
+@breadcrumb-color:              @gray-dark;
 //** Text color of current page in the breadcrumb
-@breadcrumb-active-color:       @gray-light;
+@breadcrumb-active-color:       #a9adb2;
 //** Textual separator for between breadcrumb elements
-@breadcrumb-separator:          "/";
+@breadcrumb-separator:          ">";
 
 
 //== Carousel
