--- a/docs/_includes/customizer-variables.html
+++ b/docs/_includes/customizer-variables.html
@@ -1768,6 +1768,11 @@
     <input class="form-control" id="input-@thumbnail-caption-padding" type="text" aria-describedby="help-block-@thumbnail-caption-padding" value="9px" data-var="@thumbnail-caption-padding"/>
     <p class="help-block" id="help-block-@thumbnail-caption-padding">Padding around the thumbnail caption</p>
   </div>
+  <div class="clearfix"></div>
+  <div class="col-xs-4">
+    <label for="input-@figure-caption-font-size">@figure-caption-font-size</label>
+    <input class="form-control" id="input-@figure-caption-font-size" type="text" value=".9em" data-var="@figure-caption-font-size"/>
+  </div>
 </div>
 <h2 id="wells">Wells</h2>
 <div class="row">
