--- a/docs/_includes/getting-started/examples.html
+++ b/docs/_includes/getting-started/examples.html
@@ -9,10 +9,9 @@
   <div class="row bs-examples">
     <div class="col-xs-6 col-md-4">
       <a class="thumbnail" href="../examples/ku-default/">
-        <img src="../examples/screenshots/ku_standard.png" alt="KU template with left menu">
+        <img src="../examples/screenshots/ku_standard.png" alt="KU templates">
       </a>
-      <h3>KU standard template</h3>
-      <p>Template with left menu.</p>
+      <h3>KU layout templates</h3>
     </div>
 
     <div class="clearfix visible-xs"></div>
