--- a/docs/_includes/ku-leftmenu.html
+++ b/docs/_includes/ku-leftmenu.html
@@ -3,7 +3,7 @@
     Kommunikation
   </div>
   <ul id="leftmenu" class="nav">
-    <li><a href="#">Forside</a></li>
+    <li><a href="../ku-full-page/">Front page</a></li>
     <li><a href="#">KU page templates</a>
       <ul>
         <li><a href="../ku-default/">Template with left menu</a></li>
