--- a/docs/_layouts/examples.html
+++ b/docs/_layouts/examples.html
@@ -5,7 +5,7 @@
     {% include header.html %}
   </head>
   <body class="bs-docs-home">
-    <a id="skippy" class="sr-only sr-only-focusable" href="#content"><div class="container"><span class="skiplink-text">Skip to main content</span></div></a>
+    <a id="skippy" class="sr-only sr-only-focusable" href="#main-area"><div class="container"><span class="skiplink-text">Skip to main content</span></div></a>
     <!-- Ku top navigation -->
     {% include nav/ku-nav.html %}
 
