--- a/less/bootstrap.less
+++ b/less/bootstrap.less
@@ -58,6 +58,7 @@
 // KU specific
 @import "ku-branding.less";
 @import "ku-leftmenu.less";
+@import "ku-mobile-menu.less";
 @import "ku-footer.less";
 @import "ku-bxslider.less";
 @import "ku-gridboxes.less";
