--- a/less/panels.less
+++ b/less/panels.less
@@ -21,7 +21,7 @@
 
 // Panel contents
 .panel-body {
-  //padding: @panel-body-padding;
+  padding: @panel-body-padding 0;
   &:extend(.clearfix all);
 }
 
