--- a/docs/_includes/components/thumbnails.html
+++ b/docs/_includes/components/thumbnails.html
@@ -41,6 +41,14 @@
 </div>
 {% endhighlight %}
 
+    <h2 id="thumbnails-custom-html5-content">Custom content using HTML5 figure tags</h2>
+    <p>With HTML5's figure tag, you can easily control content and captions.</p>
+    {% highlight html %}
+    <figure class="figure">
+      <img src="..." class="figure-img img-fluid img-rounded" alt="A generic square placeholder image in a figure.">
+      <figcaption class="figure-caption text-xs-right">A caption for the above image.</figcaption>
+    </figure>
+    {% endhighlight %}
   <h2 id="thumbnails-custom-content">Custom content</h2>
   <p>With a bit of extra markup, it's possible to add any kind of HTML content like headings, paragraphs, or buttons into thumbnails.</p>
   <div class="bs-example" data-example-id="thumbnails-with-custom-content">
