--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -42,8 +42,12 @@
 <link href="../assets/css/src/pygments-manni.css" rel="stylesheet">
 <link href="../assets/css/src/docs.css" rel="stylesheet">
 {% endif %}
-<!-- Mobile menu - mmenu -->
-<link rel="stylesheet" href="../../assets/css/mmenu/jquery.mmenu.css">
+<!-- jQuery -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script>
+  window.jQuery || document.write('<script src="../assets/js/vendor/jquery.min.js"><\/script>')
+</script>
+
 <!--[if lt IE 9]><script src="../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
 {% if page.slug == 'examples' or page.slug == "slideshow" %}
 <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
