--- a/docs/assets/css/mmenu/jquery.mmenu.css
+++ b/docs/assets/css/mmenu/jquery.mmenu.css
@@ -1,5 +1,4 @@
-.mm-menu,.mm-panels,.mm-panels>.mm-panel{margin:0;left:0;right:0;top:0;bottom:0;z-index:0;box-sizing:border-box}
-.mm-btn,.mm-menu{box-sizing:border-box}
+.mm-menu,.mm-panels,.mm-panels>.mm-panel{margin:0;left:0;right:0;top:0;bottom:0;z-index:0;}
 .mm-listview a,.mm-listview a:hover,.mm-navbar a,.mm-navbar a:hover{text-decoration:none}
 .mm-hidden{display:none!important}
 .mm-menu,.mm-panels>.mm-panel:not(.mm-hidden){display:block}
@@ -108,3 +107,8 @@ html.mm-opened.mm-dragging .mm-menu,html.mm-opened.mm-dragging .mm-slideout{-web
 .mm-menu:after {content: "";display: block;width: 1px;height: 120%;position: absolute;left: 100%;top: -10%;z-index:99;box-shadow: 0 0 10px rgba(0,0,0,.3);}
 /*Screen reader*/
 .mm-sronly{text-indent:10px;overflow:hidden;display:block;width:1px;height:1px;position:absolute;z-index:-1}
+/*Page dim*/
+html.mm-pagedim #mm-blocker,html.mm-pagedim-black #mm-blocker{opacity:0}
+html.mm-pagedim-black.mm-opening #mm-blocker,html.mm-pagedim.mm-opening #mm-blocker{opacity:.3;-webkit-transition:opacity .3s ease .3s;transition:opacity .3s ease .3s}
+html.mm-pagedim #mm-blocker{background:inherit}
+html.mm-pagedim-black #mm-blocker{background:#000}
