--- a/less/variables.less
+++ b/less/variables.less
@@ -807,6 +807,7 @@
 @thumbnail-caption-color:     @text-color;
 //** Padding around the thumbnail caption
 @thumbnail-caption-padding:   9px;
+@figure-caption-font-size:   .9em;
 
 
 //== Wells
