--- a/docs/_includes/customizer-variables.html
+++ b/docs/_includes/customizer-variables.html
@@ -519,7 +519,7 @@
   </div>
   <div class="col-xs-4">
     <label for="input-@input-color">@input-color</label>
-    <input class="form-control" id="input-@input-color" type="text" aria-describedby="help-block-@input-color" value="@gray" data-var="@input-color"/>
+    <input class="form-control" id="input-@input-color" type="text" aria-describedby="help-block-@input-color" value="@gray-dark" data-var="@input-color"/>
     <p class="help-block" id="help-block-@input-color">Text color for <code>&lt;input&gt;</code>s</p>
   </div>
   <div class="clearfix"></div>
@@ -557,7 +557,7 @@
   <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@input-height-base">@input-height-base</label>
-    <input class="form-control" id="input-@input-height-base" type="text" aria-describedby="help-block-@input-height-base" value="(@line-height-computed + (@padding-base-vertical * 2) + 2)" data-var="@input-height-base"/>
+    <input class="form-control" id="input-@input-height-base" type="text" aria-describedby="help-block-@input-height-base" value="(@line-height-computed + (@padding-base-vertical * 2) + 5)" data-var="@input-height-base"/>
     <p class="help-block" id="help-block-@input-height-base">Default <code>.form-control</code> height</p>
   </div>
   <div class="col-xs-4">
