--- a/docs/_layouts/examples.html
+++ b/docs/_layouts/examples.html
@@ -4,7 +4,7 @@
     <!-- Meta, title, CSS, favicons, etc. -->
     {% include header.html %}
   </head>
-  <body class="bs-docs-home">
+  <body>
     <a id="skippy" class="sr-only sr-only-focusable" href="#main-area"><div class="container"><span class="skiplink-text">Skip to main content</span></div></a>
     <!-- Ku top navigation -->
     {% include nav/ku-nav.html %}
