--- a/docs/_includes/global-footer.html
+++ b/docs/_includes/global-footer.html
@@ -194,12 +194,13 @@
 <script type="text/javascript">
   $(function() {
     // Global and left menu merging
-    var $leftmenu = $('#leftmenu').clone().wrapInner('<ul class="mobilocal-menu">').prepend('<li class="local-menu">Local menu</li>');
+    var $localMenuTitle = $('.ku-navbar-header').text();
+    var $leftmenu = $('#leftmenu').clone().wrapInner('<ul class="mobilocal-menu">').prepend('<li class="local-menu">'+ $localMenuTitle +'</li>');
     var $leftmenu2 = $('#leftmenu_2').clone();
     var $globalMenu = $('#topbar_menu').clone();
     var $globalMenu2 = $('#navbar_menu').clone();
     var $mobimenu = $('#mobileleftmenu');
-    var $menuitems = $leftmenu.append($leftmenu2).append('<li class="global-menu">Global menu</li>').append($globalMenu2).append($globalMenu);
+    var $menuitems = $leftmenu.append($leftmenu2).append($globalMenu2).append($globalMenu);
     $mobimenu.append($menuitems);
     $mobimenu.find('ul').removeClass('dropdown-menu');
     $mobimenu.mmenu({
