--- a/docs/assets/css/src/docs.css
+++ b/docs/assets/css/src/docs.css
@@ -1181,6 +1181,7 @@ h1[id] {
   padding: 0;
   margin-top: 0;
   margin-bottom: 0;
+  font-size: 12px;
   word-break: normal;
   white-space: nowrap;
   background-color: transparent;
