--- a/docs/_includes/nav/ku-nav.html
+++ b/docs/_includes/nav/ku-nav.html
@@ -18,7 +18,7 @@
           <li><a href="#">Job</a></li>
           <li><a href="#">A-Å-index</a></li>
           <li><a href="#">KUnet</a></li>
-          <li><a class="eng" href="#">English <img src="../../images/gb.svg" alt="" /></a></li>
+          <li><a class="eng" href="#">English <span><img src="../../images/gb.svg" alt="" /></span></a></li>
         </ul>
       </div>
     </div>
