--- a/less/forms.less
+++ b/less/forms.less
@@ -137,7 +137,9 @@ output {
     border: 0;
     background-color: transparent;
   }
-
+  select& {
+      padding-top: 4px; // KU specific
+  }
   // Disabled and read-only inputs
   //
   // HTML5 says that controls under a fieldset > legend:first-child won't be
