--- a/less/navbar.less
+++ b/less/navbar.less
@@ -173,8 +173,8 @@
 
 .container,
 .container-fluid {
-   > .navbar-header,
-  > .navbar-collapse {
+   > .navbar-collapse,
+  > .navbar-header {
     margin-right: -@navbar-padding-horizontal;
     margin-left: -@navbar-padding-horizontal;
     @media (min-width: @grid-float-breakpoint) {
@@ -305,8 +305,8 @@
       border: 0;
       box-shadow: none;
 
-       > li > a,
-      .dropdown-header {
+      .dropdown-header,
+      > li > a {
         padding: 5px 15px 5px 25px;
       }
 
@@ -614,11 +614,15 @@
       &.eng {
         padding-right: (@grid-gutter-width / 2);
 
-        > img {
-          display: inline-block;
+        > span {
           height: 13px;
           width: 19px;
-          margin-bottom: 2px;
+          display: inline-block;
+
+          > img {
+            max-width: 100%;
+            max-height: 100%;
+          }
         }
       }
     }
