--- a/docs/_includes/global-footer.html
+++ b/docs/_includes/global-footer.html
@@ -164,7 +164,7 @@
         setSelected: true
       }
     });
-    $(".mobilocal-menu > li").addClass("mm-opened");
+    $("#ocalmenu > li").addClass("mm-opened");
     $("#leftmenu_2 > li").addClass("mm-opened");
   });
 </script>
