--- a/less/bootstrap.less
+++ b/less/bootstrap.less
@@ -62,4 +62,5 @@
 @import "ku-footer.less";
 @import "ku-bxslider.less";
 @import "ku-gridboxes.less";
+@import "ku-datatables.less";
 @import "ku-misc.less";
