--- a/less/variables.less
+++ b/less/variables.less
@@ -12,7 +12,7 @@
 @gray-dark:              #252525;
 @gray:                   #ccc;
 @gray-light:             #777;
-@gray-lighter:           #f8f8f8;
+@gray-lighter:           #eee;
 
 @white-color:             #fff;
 
