--- a/docs/_includes/customizer-variables.html
+++ b/docs/_includes/customizer-variables.html
@@ -26,7 +26,7 @@
   </div>
   <div class="col-xs-4">
     <label for="input-@gray-lighter">@gray-lighter</label>
-    <input class="form-control" id="input-@gray-lighter" type="text" value="#f8f8f8" data-var="@gray-lighter"/>
+    <input class="form-control" id="input-@gray-lighter" type="text" value="#eee" data-var="@gray-lighter"/>
   </div>
   <div class="clearfix"></div>
   <div class="col-xs-4">
